[tool.poetry]
name = "bitstamp_btcusd_minute_data"
version = "0.1.0"
description = "Daily updates of Bitstamp BTC/USD 1 minute OHLC data with historical data since 2012"
authors = ["Mourits de Beer <ff137@proton.me>"]
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.12"

pandas = "^2.2.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
